--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 
 <body id="top">
   <img src="404 Page not found.jpg" width="100%" height="auto">
+  <br><div style="text-align: center">
+    <a href="https://tcut-sci-tech.github.io/aigirisai/" class="btn06 btnarrow2">このボタンをクリックして下さい</a>
+  </div><br>
   
   <div class="sec01">
     <div class="flex_div">
       <div class="a_div">
-        <img src="https://tcut-sci-tech.github.io/aigirisai21/tcut.jpg" width="100%" height="auto">
+        <img src="tcut.jpg" width="100%" height="auto">
       </div>
       <div class="b_div">
         <br><a href="https://tcut-sci-tech.github.io/top/">東京都市大学等々力中学校高等学校 理科部 ホームページ</a><br>
